# AutonomousTruckPlatoons

./: Dockerfile  LICENSE  README.md  RESPONSIBILITIES  WhatistsillTODO  compile_all.sh  run_all.sh
backend/: CHANGES.rst  README.md  setup.cfg  setup.py
backend/shortest_path/: README.md
backend/shortest_path/scripts/: dijkstra.py
backend/tcp_server/: README.md
backend/tcp_server/scripts/: tcp_server_backend.py
backend/test/: test_shortest_path.py  test_tcp_server.py
external_controller/: README.md  external_controller.gpr
external_controller/backend_client/: backend_client.gpr
external_controller/backend_client/src/: backend_client.adb  backend_client.ads
external_controller/controller_peer/: README.md  controller_peer.gpr
external_controller/controller_peer/src/: controller_peer.adb  controller_peer.ads
external_controller/follow_path/: README.md  follow_path.gpr
external_controller/follow_path/src/: follow_path.adb  follow_path.ads
external_controller/message_handle/: README.md  message_handle.gpr
external_controller/position_algorithm/: README.md  position_algorithm.gpr
external_controller/protectsobj/: README.md  protectsobj.gpr
external_controller/src/: main.adb
external_controller/webots_server/: webots_server.gpr
frontend/: README.md  app.py  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
frontend/src/services/: truck-service.js
webots/: README.md
webots/controllers/: README.md  compile_webots.sh
webots/protos/: TRUCK_final.proto
webots/worlds/: enviroment_final_5T.wbt
(+14 files in other folders)
