[metadata]
name = setup.cfg
version = 0.0.1.dev
author = Teodor Janez Podobnik
author-email = tp4348@student.uni-lj.si
summary = Configuration file for Autonomous trucks
license = BSD 3-Clause License
description-file =
    README.md
    CHANGES.rst
requires-dist = setuptools
classifier =
    Development Status :: 3 - Alfa 
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: 20.04 Ubuntu 
    Programming Language :: Python :: 3

[files]
packages =
    setup.cfg
